# spht

./: .gitignore  Dockerfile  README.md  azure-pipelines.yml  bonghit.js  cloudbuild.yaml  lewd.js  package.json  pyproject.toml  requirements.txt  weather.js
bot/: bot.py  config.py  main.py  storage.py
bot/cogs/: bonghit.py  cat.py  crypto.py  info.py  settings.py  stocks.py  weather.py  wolfram.py
bot/lib/yahoo_fin/: setup.py  stock_info.py
bot/modules/: weather.py
hubot/: README.md  external-scripts.json  package-lock.json  package.json
lib/: settings.js
scripts/: bonghit.js  lewd.js  profanity.js  stock.js  weather.js
test/: profanity.test.js  weather.test.js
test/replies/: weather.current-response.json  weather.forecast-response.json
